--- a/static/css/index.css
+++ b/static/css/index.css
@@ -15,6 +15,7 @@ body {
   
   .overlay {
     background-color: rgba(255, 255, 255, 0.85);
+    margin-top: 80px;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
