--- a/templates/people.html
+++ b/templates/people.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/people.css') }}">
 <div class="people-container">
   <h2>Meet the Team</h2>
-  <h3>Gourmet Vibes–Group 12</h3
+  <h3>Gourmet Vibes–Group 12</h3>
 
   <div class="people-grid">
     <!-- First Row: 3 People -->
