--- a/static/css/people.css
+++ b/static/css/people.css
@@ -82,3 +82,10 @@ body {
     border-radius: 50%;
     margin-bottom: 10px;
   }
+
+  .card-link {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    padding: 10px;
+  }
