--- a/templates/people.html
+++ b/templates/people.html
@@ -10,22 +10,31 @@
   <div class="people-grid">
     <!-- First Row: 3 People -->
     <div class="people-row">
-      <div class="person-card">
+      <div class="person-card ">
         <a href="{{ url_for('track_click', member_name='selin') }}" target="_blank" class="card-link">
           <img src="{{ url_for('static', filename='images/Selin.jpeg') }}" class="person-photo">
-          <h3>Selin Ceydeli</h3>
+          <h3>
+            Selin Ceydeli
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn" class="linkedin-icon">
+          </h3>
         </a>
       </div>
       <div class="person-card">
         <a href="{{ url_for('track_click', member_name='mees') }}" target="_blank" class="card-link">
           <img src="{{ url_for('static', filename='images/Mees.jpeg') }}" class="person-photo">
-          <h3>Mees Chammat</h3>
+          <h3>
+            Mees Chammat
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn" class="linkedin-icon">
+          </h3>
         </a>
       </div>
       <div class="person-card">
         <a href="{{ url_for('track_click', member_name='philippe') }}" target="_blank" class="card-link">
           <img src="{{ url_for('static', filename='images/Phil.jpeg') }}" class="person-photo">
-          <h3>Philippe Henry</h3>
+          <h3>
+            Philippe Henry
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn" class="linkedin-icon">
+          </h3>
         </a>
       </div>
     </div>
@@ -35,13 +44,19 @@
       <div class="person-card">
         <a href="{{ url_for('track_click', member_name='ayush') }}" target="_blank" class="card-link">
           <img src="{{ url_for('static', filename='images/Ayush.jpeg') }}" class="person-photo">
-          <h3>Ayush Kuruvilla</h3>
+          <h3>
+            Ayush Kuruvilla
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn" class="linkedin-icon">
+          </h3>
         </a>
       </div>
       <div class="person-card">
         <a href="{{ url_for('track_click', member_name='peter') }}" target="_blank" class="card-link">
           <img src="{{ url_for('static', filename='images/Peter.jpeg') }}" class="person-photo">
-          <h3>Pengxuan Huang</h3>
+          <h3>
+            Pengxuan Huang
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn" class="linkedin-icon">
+          </h3>
         </a>
       </div>
     </div>
