with linkedin icon

--- a/templates/people.html
+++ b/templates/people.html
@@ -15,6 +15,7 @@
           <img src="{{ url_for('static', filename='images/Selin.jpeg') }}" class="person-photo">
           <h3>
             Selin Ceydeli
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn" class="linkedin-icon">
           </h3>
         </a>
       </div>
@@ -23,6 +24,7 @@
           <img src="{{ url_for('static', filename='images/Mees.jpeg') }}" class="person-photo">
           <h3>
             Mees Chammat
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn" class="linkedin-icon">
           </h3>
         </a>
       </div>
@@ -31,6 +33,7 @@
           <img src="{{ url_for('static', filename='images/Phil.jpeg') }}" class="person-photo">
           <h3>
             Philippe Henry
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn" class="linkedin-icon">
           </h3>
         </a>
       </div>
@@ -43,6 +46,7 @@
           <img src="{{ url_for('static', filename='images/Ayush.jpeg') }}" class="person-photo">
           <h3>
             Ayush Kuruvilla
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn" class="linkedin-icon">
           </h3>
         </a>
       </div>
@@ -51,6 +55,7 @@
           <img src="{{ url_for('static', filename='images/Peter.jpeg') }}" class="person-photo">
           <h3>
             Pengxuan Huang
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn" class="linkedin-icon">
           </h3>
         </a>
       </div>
