--- a/static/css/people.css
+++ b/static/css/people.css
@@ -56,6 +56,8 @@ body {
   position: relative;
   display: inline-block;
 }
+
+
 .person-card p {
   margin: 8px 0 0;
   font-size: 14px;
@@ -99,7 +101,10 @@ body {
   width: 20px;
   height: 20px;
   opacity: 0;
-  transition: opacity 0.3s ease;
+  display: inline-block; 
+  object-fit: contain;    
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /* show on hover */
