--- a/templates/people.html
+++ b/templates/people.html
@@ -15,7 +15,8 @@
           <img src="{{ url_for('static', filename='images/Selin.jpeg') }}" class="person-photo">
           <h3>
             Selin Ceydeli
-
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn"
+            onerror="this.style.display='none';" class="linkedin-icon">
           </h3>
         </a>
       </div>
@@ -24,7 +25,8 @@
           <img src="{{ url_for('static', filename='images/Mees.jpeg') }}" class="person-photo">
           <h3>
             Mees Chammat
-
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn"
+            onerror="this.style.display='none';" class="linkedin-icon">
           </h3>
         </a>
       </div>
@@ -33,7 +35,8 @@
           <img src="{{ url_for('static', filename='images/Phil.jpeg') }}" class="person-photo">
           <h3>
             Philippe Henry
-
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn"
+            onerror="this.style.display='none';" class="linkedin-icon">
           </h3>
         </a>
       </div>
@@ -46,7 +49,8 @@
           <img src="{{ url_for('static', filename='images/Ayush.jpeg') }}" class="person-photo">
           <h3>
             Ayush Kuruvilla
-
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn"
+            onerror="this.style.display='none';" class="linkedin-icon">
           </h3>
         </a>
       </div>
@@ -55,7 +59,8 @@
           <img src="{{ url_for('static', filename='images/Peter.jpeg') }}" class="person-photo">
           <h3>
             Pengxuan Huang
-
+            <img src="{{ url_for('static', filename='icons/linkedin.svg') }}" alt="LinkedIn"
+            onerror="this.style.display='none';" class="linkedin-icon">
           </h3>
         </a>
       </div>
